change identification from ip to uuid